--- a/index.html
+++ b/index.html
@@ -16,37 +16,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#home">
-                <span class="brand-text">RAYLEIGH</span>
-                <span class="brand-subtitle">STUDIOS</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#games">Games</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#team">Team</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Navigation (loaded dynamically) -->
+    <div id="navbar-placeholder"></div>
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
@@ -195,26 +166,8 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 mb-4 mb-md-0">
-                    <h5>Rayleigh Studios</h5>
-                    <p >Creating immersive gaming experiences since 2025</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <div class="social-links">
-                        
-                        <a href="#"><i class="bi bi-youtube"></i></a>
-                        <a href="#"><i class="bi bi-discord"></i></a>
-                        <a href="#"><i class="bi bi-controller"></i></a>
-                    </div>
-                    <p class=" mt-3 mb-0">&copy; 2025 Rayleigh Studios. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer (loaded dynamically) -->
+    <div id="footer-placeholder"></div>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
